syntax = "proto3";
option go_package = "../pb";

import "transactions.proto";
import "google/protobuf/timestamp.proto";

message DBValidator {
        string peer_id                = 1;
        uint64 total_stake            = 2;
        repeated Nullifier nullifiers = 3;
        uint64 unclaimed_coins        = 4;
        uint32 epochBLocks            = 5;
        float stakeAccumulator        = 6;

        message Nullifier {
                bytes hash                           = 1;
                uint64 amount                        = 2;
                google.protobuf.Timestamp blockstamp = 3;
        }
}

message DBTxs {
        repeated Transaction transactions = 1;
}

message DBBlockNode {
        bytes blockID   = 1;
        uint32 height   = 2;
        int64 timestamp = 3;
}

message DBAccumulator {
        repeated bytes accumulator        = 1;
        uint64 nElements                  = 2;
        repeated InclusionProof proofs    = 3;
        repeated LookupMap lookupMap      = 4;

        message InclusionProof {
                bytes key             = 1;
                bytes id              = 2;
                uint64 index          = 3;
                repeated bytes hashes = 4;
                uint64 flags          = 5;
                bytes last            = 6;
        }

        message LookupMap {
              bytes key    = 1;
              uint64 index = 2;
        }
}
